--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
     "name": "@carmel/node",
-    "version": "1.2.5",
+    "version": "1.2.9",
     "description": "Carmel Node",
-    "main": "src/index.mts",
+    "main": "src/index.ts",
     "type": "module",
     "author": "Chunky <chunky@fluidtrends.com>",
     "license": "MIT",
+    "scripts": {
+        "dev": "DEBUG=carmel* node --import @swc-node/register/esm-register src/dev.ts"
+    },
     "dependencies": {
         "@chainsafe/libp2p-noise": "^15.1.1",
         "@chainsafe/libp2p-yamux": "^6.0.2",
@@ -35,6 +38,9 @@
         "@types/debug": "^4.1.12",
         "@types/figlet": "^1.5.8",
         "@types/fs-extra": "^11.0.4",
-        "@types/node": "^22.5.0"
+        "@types/node": "^22.5.0",
+        "@swc-node/register": "^1.10.9",
+        "@swc/core": "^1.7.5",
+        "typescript": "^5.5.4"
     }
 }
