--- a/package.json
+++ b/package.json
@@ -34,15 +34,16 @@
         "helia": "^4.2.5",
         "libp2p": "^1.9.2",
         "lowdb": "^7.0.1",
-        "nanoid": "^5.0.7"
+        "nanoid": "^5.0.7",
+        "uint8arrays": "^5.1.0"
     },
     "devDependencies": {
+        "@swc-node/register": "^1.10.9",
+        "@swc/core": "^1.7.5",
         "@types/debug": "^4.1.12",
         "@types/figlet": "^1.5.8",
         "@types/fs-extra": "^11.0.4",
         "@types/node": "^22.5.0",
-        "@swc-node/register": "^1.10.9",
-        "@swc/core": "^1.7.5",
         "typescript": "^5.5.4"
     }
 }
