--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "license": "MIT",
     "scripts": {
         "dev": "DEBUG=carmel* node --import @swc-node/register/esm-register src/scripts/dev.mts",
+        "dev2": "MAIN_ETH_PRIVATE_KEY=0x7d41ed4c25ade8ec476d4bf996ab77c65f1494045123de629cb08447f2613e19 DEBUG=carmel* node --import @swc-node/register/esm-register src/scripts/dev.mts",
         "start": "DEBUG=carmel* pm2 --node-args=\"--import @swc-node/register/esm-register\" start src/scripts/dev.mts --name carmel-node",
         "log": "pm2 logs carmel-node"
     },
     "dependencies": {
+        "@chainsafe/libp2p-gossipsub": "^13.2.0",
         "@chainsafe/libp2p-noise": "^15.1.1",
         "@chainsafe/libp2p-yamux": "^6.0.2",
         "@libp2p/bootstrap": "^10.1.5",
@@ -22,6 +24,7 @@
         "@libp2p/mdns": "^10.1.5",
         "@libp2p/mplex": "^10.1.5",
         "@libp2p/peer-id-factory": "^4.2.4",
+        "@libp2p/ping": "^1.1.6",
         "@libp2p/tcp": "^9.1.5",
         "@libp2p/webrtc": "^4.1.7",
         "@libp2p/websockets": "^8.2.0",
