--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "@chainsafe/libp2p-noise": "^15.1.1",
         "@chainsafe/libp2p-yamux": "^6.0.2",
         "@electric-sql/pglite": "^0.2.5",
+        "@helia/unixfs": "^3.0.7",
         "@libp2p/bootstrap": "^10.1.5",
         "@libp2p/circuit-relay-v2": "^1.1.5",
         "@libp2p/floodsub": "^9.1.5",
@@ -31,6 +32,8 @@
         "@libp2p/websockets": "^8.2.0",
         "@libp2p/webtransport": "^4.1.7",
         "@multiformats/multiaddr": "^12.3.0",
+        "blockstore-fs": "^2.0.0",
+        "datastore-fs": "^10.0.0",
         "debug": "^4.3.6",
         "dotenv": "^16.4.5",
         "figlet": "^1.7.0",
