--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "@chainsafe/libp2p-noise": "^15.1.1",
         "@chainsafe/libp2p-yamux": "^6.0.2",
         "@electric-sql/pglite": "^0.2.5",
+        "@helia/strings": "^3.0.5",
         "@helia/unixfs": "^3.0.7",
         "@libp2p/bootstrap": "^10.1.5",
         "@libp2p/circuit-relay-v2": "^1.1.5",
@@ -43,6 +44,7 @@
         "libp2p": "^1.9.2",
         "lowdb": "^7.0.1",
         "nanoid": "^5.0.7",
+        "uint8array-extras": "^1.4.0",
         "uint8arrays": "^5.1.0",
         "yjs": "^13.6.18"
     },
