--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "@chainsafe/libp2p-noise": "^15.1.1",
         "@chainsafe/libp2p-yamux": "^6.0.2",
         "@electric-sql/pglite": "^0.2.5",
+        "@helia/dag-cbor": "^3.0.6",
         "@helia/dag-json": "^3.0.6",
         "@helia/strings": "^3.0.5",
         "@helia/unixfs": "^3.0.7",
