--- a/package.json
+++ b/package.json
@@ -13,29 +13,30 @@
         "log": "pm2 logs carmel-node"
     },
     "dependencies": {
-        "@chainsafe/libp2p-gossipsub": "^13.2.0",
-        "@chainsafe/libp2p-noise": "^15.1.1",
-        "@chainsafe/libp2p-yamux": "^6.0.2",
+        "@chainsafe/libp2p-gossipsub": "^14.1.0",
+        "@chainsafe/libp2p-noise": "^16.0.0",
+        "@chainsafe/libp2p-yamux": "^7.0.0",
         "@electric-sql/pglite": "^0.2.5",
         "@helia/dag-cbor": "^3.0.6",
         "@helia/dag-json": "^3.0.6",
         "@helia/strings": "^3.0.5",
         "@helia/unixfs": "^3.0.7",
-        "@libp2p/bootstrap": "^10.1.5",
-        "@libp2p/circuit-relay-v2": "^1.1.5",
+        "@libp2p/bootstrap": "^11.0.1",
+        "@libp2p/circuit-relay-v2": "^2.0.1",
+        "@libp2p/dcutr": "^2.0.1",
         "@libp2p/floodsub": "^9.1.5",
-        "@libp2p/identify": "^2.1.5",
-        "@libp2p/kad-dht": "^12.1.5",
-        "@libp2p/mdns": "^10.1.5",
-        "@libp2p/mplex": "^10.1.5",
+        "@libp2p/identify": "^3.0.1",
+        "@libp2p/kad-dht": "^13.0.1",
+        "@libp2p/mdns": "^11.0.1",
+        "@libp2p/mplex": "^11.0.1",
         "@libp2p/peer-id-factory": "^4.2.4",
-        "@libp2p/ping": "^1.1.6",
-        "@libp2p/tcp": "^9.1.5",
-        "@libp2p/webrtc": "^4.1.7",
-        "@libp2p/websockets": "^8.2.0",
-        "@libp2p/webtransport": "^4.1.7",
-        "@multiformats/multiaddr": "^12.3.0",
-        "blockstore-fs": "^2.0.0",
+        "@libp2p/ping": "^2.0.1",
+        "@libp2p/tcp": "^10.0.1",
+        "@libp2p/webrtc": "^5.0.2",
+        "@libp2p/websockets": "^9.0.1",
+        "@libp2p/webtransport": "^5.0.2",
+        "@multiformats/multiaddr": "^12.3.1",
+        "blockstore-fs": "^2.0.2",
         "datastore-fs": "^10.0.0",
         "debug": "^4.3.6",
         "dotenv": "^16.4.5",
@@ -43,7 +44,7 @@
         "fs-extra": "^11.2.0",
         "helia": "^4.2.5",
         "js-base64": "^3.7.7",
-        "libp2p": "^1.9.2",
+        "libp2p": "2.0.2",
         "lowdb": "^7.0.1",
         "nanoid": "^5.0.7",
         "uint8array-extras": "^1.4.0",
