--- a/package.json
+++ b/package.json
@@ -23,12 +23,14 @@
         "@helia/unixfs": "^3.0.7",
         "@libp2p/bootstrap": "^11.0.1",
         "@libp2p/circuit-relay-v2": "^2.0.1",
+        "@libp2p/crypto": "^5.0.4",
         "@libp2p/dcutr": "^2.0.1",
         "@libp2p/floodsub": "^9.1.5",
         "@libp2p/identify": "^3.0.1",
         "@libp2p/kad-dht": "^13.0.1",
         "@libp2p/mdns": "^11.0.1",
         "@libp2p/mplex": "^11.0.1",
+        "@libp2p/peer-id": "^5.0.4",
         "@libp2p/peer-id-factory": "^4.2.4",
         "@libp2p/ping": "^2.0.1",
         "@libp2p/tcp": "^10.0.1",
