--- a/package.json
+++ b/package.json
@@ -33,12 +33,14 @@
         "@libp2p/peer-id": "^5.0.4",
         "@libp2p/peer-id-factory": "^4.2.4",
         "@libp2p/ping": "^2.0.1",
+        "@libp2p/pubsub-peer-discovery": "^11.0.0",
         "@libp2p/tcp": "^10.0.1",
         "@libp2p/webrtc": "^5.0.2",
         "@libp2p/websockets": "^9.0.1",
         "@libp2p/webtransport": "^5.0.2",
         "@multiformats/multiaddr": "^12.3.1",
         "blockstore-fs": "^2.0.2",
+        "bree": "^9.2.4",
         "datastore-fs": "^10.0.0",
         "debug": "^4.3.6",
         "dotenv": "^16.4.5",
