simplified node, using core

--- a/package.json
+++ b/package.json
@@ -1,66 +1,22 @@
 {
     "name": "@carmel/node",
-    "version": "1.2.12",
+    "version": "1.2.13",
     "description": "Carmel Node",
     "main": "src/index.mts",
     "type": "module",
     "author": "Chunky <chunky@fluidtrends.com>",
     "license": "MIT",
     "scripts": {
-        "dev": "DEBUG=carmel* node --import @swc-node/register/esm-register src/scripts/dev.mts",
-        "dev2": "MAIN_ETH_PRIVATE_KEY=0x7d41ed4c25ade8ec476d4bf996ab77c65f1494045123de629cb08447f2613e19 DEBUG=carmel* node --import @swc-node/register/esm-register src/scripts/dev.mts",
-        "start": "DEBUG=carmel* pm2 --node-args=\"--import @swc-node/register/esm-register\" start src/scripts/dev.mts --name carmel-node",
+        "dev": "DEBUG=carmel* node --import @swc-node/register/esm-register src/scripts/start.mts",
+        "start": "DEBUG=carmel* pm2 --node-args=\"--import @swc-node/register/esm-register\" start src/scripts/start.mts --name carmel-node",
         "log": "pm2 logs carmel-node"
     },
     "dependencies": {
-        "@chainsafe/libp2p-gossipsub": "^14.1.0",
-        "@chainsafe/libp2p-noise": "^16.0.0",
-        "@chainsafe/libp2p-yamux": "^7.0.0",
-        "@electric-sql/pglite": "^0.2.5",
-        "@helia/dag-cbor": "^3.0.6",
-        "@helia/dag-json": "^3.0.6",
-        "@helia/strings": "^3.0.5",
-        "@helia/unixfs": "^3.0.7",
-        "@libp2p/bootstrap": "^11.0.1",
-        "@libp2p/circuit-relay-v2": "^2.0.1",
-        "@libp2p/crypto": "^5.0.4",
-        "@libp2p/dcutr": "^2.0.1",
-        "@libp2p/floodsub": "^9.1.5",
-        "@libp2p/identify": "^3.0.1",
-        "@libp2p/kad-dht": "^13.0.1",
-        "@libp2p/mdns": "^11.0.1",
-        "@libp2p/mplex": "^11.0.1",
-        "@libp2p/peer-id": "^5.0.4",
-        "@libp2p/peer-id-factory": "^4.2.4",
-        "@libp2p/ping": "^2.0.1",
-        "@libp2p/pubsub-peer-discovery": "^11.0.0",
-        "@libp2p/tcp": "^10.0.1",
-        "@libp2p/webrtc": "^5.0.2",
-        "@libp2p/websockets": "^9.0.1",
-        "@libp2p/webtransport": "^5.0.2",
-        "@multiformats/multiaddr": "^12.3.1",
-        "blockstore-fs": "^2.0.2",
-        "bree": "^9.2.4",
-        "datastore-fs": "^10.0.0",
-        "debug": "^4.3.6",
-        "dotenv": "^16.4.5",
-        "figlet": "^1.7.0",
-        "fs-extra": "^11.2.0",
-        "helia": "^4.2.5",
-        "js-base64": "^3.7.7",
-        "libp2p": "2.0.2",
-        "lowdb": "^7.0.1",
-        "nanoid": "^5.0.7",
-        "uint8array-extras": "^1.4.0",
-        "uint8arrays": "^5.1.0",
-        "yjs": "^13.6.18"
+        "@carmel/core": "^1.10.2"
     },
     "devDependencies": {
         "@swc-node/register": "^1.10.9",
         "@swc/core": "^1.7.5",
-        "@types/debug": "^4.1.12",
-        "@types/figlet": "^1.5.8",
-        "@types/fs-extra": "^11.0.4",
         "@types/node": "^22.5.0",
         "typescript": "^5.5.4"
     }
