brings its own libp2p

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@carmel/node",
-    "version": "1.2.13",
+    "version": "1.2.14",
     "description": "Carmel Node",
     "main": "src/index.mts",
     "type": "module",
@@ -12,7 +12,44 @@
         "log": "pm2 logs carmel-node"
     },
     "dependencies": {
-        "@carmel/core": "^1.10.4"
+        "@carmel/core": "^1.10.5",
+        "@chainsafe/libp2p-gossipsub": "^14.1.0",
+        "@chainsafe/libp2p-noise": "^16.0.0",
+        "@chainsafe/libp2p-yamux": "^7.0.0",
+        "@electric-sql/pglite": "^0.2.5",
+        "@helia/dag-cbor": "^3.0.6",
+        "@helia/dag-json": "^3.0.6",
+        "@helia/strings": "^3.0.5",
+        "@helia/unixfs": "^3.0.7",
+        "@helia/verified-fetch": "^1.5.0",
+        "@libp2p/bootstrap": "^11.0.1",
+        "@libp2p/circuit-relay-v2": "^2.0.1",
+        "@libp2p/crypto": "^5.0.4",
+        "@libp2p/dcutr": "^2.0.1",
+        "@libp2p/floodsub": "^9.1.5",
+        "@libp2p/identify": "^3.0.1",
+        "@libp2p/kad-dht": "^13.0.1",
+        "@libp2p/mdns": "^11.0.1",
+        "@libp2p/mplex": "^11.0.1",
+        "@libp2p/peer-id": "^5.0.4",
+        "@libp2p/peer-id-factory": "^4.2.4",
+        "@libp2p/ping": "^2.0.1",
+        "@libp2p/pubsub-peer-discovery": "^11.0.0",
+        "@libp2p/tcp": "^10.0.1",
+        "@libp2p/webrtc": "^5.0.2",
+        "@libp2p/websockets": "^9.0.1",
+        "@libp2p/webtransport": "^5.0.2",
+        "@multiformats/multiaddr": "^12.3.1",
+        "@types/debug": "^4.1.12",
+        "@types/fs-extra": "^11.0.4",
+        "blockstore-fs": "^2.0.2",
+        "blockstore-idb": "^2.0.1",
+        "browser-or-node": "^3.0.0",
+        "datastore-fs": "^10.0.2",
+        "datastore-idb": "^3.0.1",
+        "debug": "^4.4.0",
+        "fs-extra": "^11.3.0",
+        "libp2p": "^2.5.0"
     },
     "devDependencies": {
         "@swc-node/register": "^1.10.9",
