--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@carmel/node",
-    "version": "1.2.14",
+    "version": "1.3.0",
     "description": "Carmel Node",
     "main": "src/index.mts",
     "type": "module",
@@ -13,7 +13,7 @@
         "log": "pm2 logs carmel-node"
     },
     "dependencies": {
-        "@carmel/core": "^1.10.5",
+        "@carmel/core": "lates",
         "@chainsafe/libp2p-gossipsub": "^14.1.0",
         "@chainsafe/libp2p-noise": "^16.0.0",
         "@chainsafe/libp2p-yamux": "^7.0.0",
