--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
         "log": "pm2 logs carmel-node"
     },
     "dependencies": {
-        "@carmel/core": "lates",
+        "@carmel/core": "latest",
         "@chainsafe/libp2p-gossipsub": "^14.1.0",
         "@chainsafe/libp2p-noise": "^16.0.0",
         "@chainsafe/libp2p-yamux": "^7.0.0",
